change orders of menu

--- a/index.html
+++ b/index.html
@@ -21,29 +21,21 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: 100%" src="images/logo.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: auto" src="images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
 		<div class="collapse navbar-collapse" id="ftco-nav">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item active"><a href="index.html" class="nav-link pl-0">首页</a></li>
-				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
-				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
+				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
+
 				<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
+				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
-
-<!--				<li class="nav-item active"><a href="index.html" class="nav-link pl-0">Home</a></li>-->
-<!--				<li class="nav-item"><a href="investment.html" class="nav-link">Consulting Service</a></li>-->
-<!--				<li class="nav-item"><a href="products.html" class="nav-link">Investment Service</a></li>-->
-<!--				<li class="nav-item"><a href="products.html" class="nav-link">Hunter Service</a></li>-->
-<!--				<li class="nav-item"><a href="news.html" class="nav-link">BOI News</a></li>-->
-<!--				<li class="nav-item"><a href="about.html" class="nav-link">About BOI</a></li>-->
-<!--				<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>-->
-
 			</ul>
 		</div>
 	</div>
@@ -57,10 +49,11 @@
 				<div class="col-md-12 suscribete_form">
 					<h1 class="mb-4">BRAIN OCEAN INTERNATIONAL</h1>
 					<h2 style = "color: #f7f8f8">Improving Minds, Building Future</h2>
-					<p><a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
+					<p><a href="products.html" class="btn btn-light px-4 py-3"> 渠道拓展</a>
 						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
-						<a href="products.html" class="btn btn-light px-4 py-3"> 渠道拓展</a>
+
 						<a href="gooverseas.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
+						<a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
 					</p>
 				</div>
 			</div>
@@ -73,10 +66,12 @@
 				<div class="col-md-12 suscribete_form">
 					<h1 class="mb-4">睿泽国际</h1>
 					<h2 style = "color: #f7f8f8">启迪智慧，创造未来</h2>
-					<p><a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
-						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
+					<p>
 						<a href="products.html" class="btn btn-light px-4 py-3"> 渠道拓展</a>
+						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
+
 						<a href="gooverseas.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
+						<a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
 					</p>
 				</div>
 			</div>
@@ -89,10 +84,12 @@
 				<div class="col-md-12 suscribete_form">
 					<h1 class="mb-4">BRAIN OCEAN INTERNATIONAL</h1>
 					<h2 style = "color: #f7f8f8">Mejorar Mentes, Construir Futuro</h2>
-					<p><a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
-						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
+					<p>
 						<a href="products.html" class="btn btn-light px-4 py-3"> 渠道拓展</a>
+						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
+
 						<a href="gooverseas.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
+						<a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
 					</p>
 				</div>
 			</div>
@@ -117,23 +114,22 @@
 
 <section class="ftco-section bg-light">
 	<div class="container">
-		<div class="row" class = "wrapper">
+		<div class="row wrapper">
 
-			<div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">
+
+			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
-					<a href="investment.html" class="block-20 d-flex align-items-end" style="background-image: url('images/investment.jpg');">
+					<a href="products.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_3.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">1</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="investment.html">金融保险</a></h3>
-						<p>睿泽国际CEO Yanik Yang作为在欧洲从业二十余年金融投资专家，为您提供最优质的金融投资与保险服务。</p>
+						<h3 class="heading"><a href="products.html">渠道拓展</a></h3>
+						<p>睿泽国际为企业在伊比利亚半岛和拉美市场进行渠道拓展，与当地企业进行商务对接，并代理产品B2B销售。</p>
 					</div>
 				</div>
 			</div>
-
-
 			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
 					<a href="ittech.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/network/1.jpg');">
@@ -149,25 +145,13 @@
 			</div>
 
 
-			<div class="col-md-5 col-lg-6 ftco-animate">
-				<div class="blog-entry">
-					<a href="products.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_3.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">3</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="products.html">渠道拓展</a></h3>
-						<p>睿泽国际为企业在伊比利亚半岛和拉美市场进行渠道拓展，与当地企业进行商务对接，并代理产品B2B销售。</p>
-					</div>
-				</div>
-			</div>
+
 
 			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
 					<a href="gooverseas.html" class="block-20 d-flex align-items-end" style="background-image: url('images/bg_10.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">4</span>
+							<span class="day">3</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
@@ -176,6 +160,21 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="investment.html" class="block-20 d-flex align-items-end" style="background-image: url('images/investment.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">4</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="investment.html">金融保险</a></h3>
+						<p>睿泽国际CEO Yanik Yang作为在欧洲从业二十余年金融投资专家，为您提供最优质的金融投资与保险服务。</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		</div>
 	</div>
 </section>
@@ -183,6 +182,8 @@
 
 <section class="ftco-section">
 	<div class="container-fluid" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+
+		<div class="container">
 		<div class="row justify-content-center mb-5 pb-1" >
 			<div class="col-md-8 text-center heading-section ftco-animate">
 				<br>
@@ -192,20 +193,20 @@
 		</div>
 
 		<div class="row">
+
 			<div class="col-md-12 col-lg-12 ftco-animate ">
 				<div class="blog-entry">
 					<div class="img-wrap d-flex align-items-stretch">
 
-						<div class="img col-md-12 col-lg-3 ftco-animate" style="background-image: url(images/service1.jpg); "></div>
+						<div class="img col-md-12 col-lg-3 ftco-animate align-items-stretch" style="background-image: url(images/service3.jpg);"></div>
 						<div class="col-md-12  col-lg-9 ftco-animate p-0" style = "background-color: #f8f9fc">
 							<div class="text bg-white p-2">
 								<div class="px-1">
-									<H4>金融投资服务案例</H4>
-									<p><a>【案例一】华意压缩机集团收购西班牙Cubig。</a></p>
-									<p><a>【案例二】爱尔眼科收购西班牙Clinic Barviera。</a></p>
+									<H4>渠道拓展案例介绍</H4>
+									<p>睿泽国际已于VIVO等多家智能手机公司签署协议，成为其B2B渠道商，代理其在西班牙境内的B2B销售业务，并从中协调与MAPFRE达成战略协议进行商业互补。</p>
 								</div>
-								<div class="d-flex align-items-center mt-4">
-									<p  class="mb-0"><a href="investment/investment_case.html" class="btn btn-secondary">点击查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+								<div class="d-flex align-items-end mt-4" >
+									<p  class="mb-0"><a href="products/products_case.html" class="btn btn-secondary">点击查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 								</div>
 							</div>
 						</div>
@@ -233,25 +234,7 @@
 				</div>
 			</div>
 
-			<div class="col-md-12 col-lg-12 ftco-animate ">
-				<div class="blog-entry">
-					<div class="img-wrap d-flex align-items-stretch">
 
-						<div class="img col-md-12 col-lg-3 ftco-animate align-items-stretch" style="background-image: url(images/service3.jpg);"></div>
-						<div class="col-md-12  col-lg-9 ftco-animate p-0" style = "background-color: #f8f9fc">
-							<div class="text bg-white p-2">
-								<div class="px-1">
-									<H4>渠道拓展案例介绍</H4>
-									<p>睿泽国际已于VIVO等多家智能手机公司签署协议，成为其B2B渠道商，代理其在西班牙境内的B2B销售业务，并从中协调与MAPFRE达成战略协议进行商业互补。</p>
-								</div>
-								<div class="d-flex align-items-end mt-4" >
-									<p  class="mb-0"><a href="products/products_case.html" class="btn btn-secondary">点击查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
 
 			<div class="col-md-12 col-lg-12 ftco-animate ">
 				<div class="blog-entry">
@@ -272,6 +255,27 @@
 				</div>
 			</div>
 
+			<div class="col-md-12 col-lg-12 ftco-animate ">
+				<div class="blog-entry">
+					<div class="img-wrap d-flex align-items-stretch">
+
+						<div class="img col-md-12 col-lg-3 ftco-animate" style="background-image: url(images/service1.jpg); "></div>
+						<div class="col-md-12  col-lg-9 ftco-animate p-0" style = "background-color: #f8f9fc">
+							<div class="text bg-white p-2">
+								<div class="px-1">
+									<H4>金融投资服务案例</H4>
+									<p><a>【案例一】华意压缩机集团收购西班牙Cubig。</a></p>
+									<p><a>【案例二】爱尔眼科收购西班牙Clinic Barviera。</a></p>
+								</div>
+								<div class="d-flex align-items-center mt-4">
+									<p  class="mb-0"><a href="investment/investment_case.html" class="btn btn-secondary">点击查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		</div>
 	</div>
 </section>
@@ -290,7 +294,7 @@
 </section>
 
 
-
+<!--合作伙伴图标-->
 <section class="ftco-section ftco-no-pb">
 	<div class="container-fluid">
 		<div class="row">
@@ -427,13 +431,7 @@
 <section class="ftco-gallery">
 	<div class="container-wrap">
 		<div class="row no-gutters">
-			<div class="col-md-3 ftco-animate">
-				<a href="images/image_1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_1.jpg);">
-					<div class="icon mb-4 d-flex align-items-center justify-content-center">
-						<span class="icon-instagram"></span>
-					</div>
-				</a>
-			</div>
+
 			<div class="col-md-3 ftco-animate">
 				<a href="images/image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_2.jpg);">
 					<div class="icon mb-4 d-flex align-items-center justify-content-center">
@@ -451,6 +449,13 @@
 
 			<div class="col-md-3 ftco-animate">
 				<a href="images/image_4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_4.jpg);">
+					<div class="icon mb-4 d-flex align-items-center justify-content-center">
+						<span class="icon-instagram"></span>
+					</div>
+				</a>
+			</div>
+			<div class="col-md-3 ftco-animate">
+				<a href="images/image_1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_1.jpg);">
 					<div class="icon mb-4 d-flex align-items-center justify-content-center">
 						<span class="icon-instagram"></span>
 					</div>
@@ -523,10 +528,11 @@
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
 						<li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
-						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
-						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
+						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
+
 						<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
+						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
