--- a/ittech.html
+++ b/ittech.html
@@ -28,10 +28,11 @@
 		<div class="collapse navbar-collapse" id="ftco-nav">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
-				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
-				<li class="nav-item active"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
+				<li class="nav-item active"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
+
 				<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
+				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
@@ -61,7 +62,19 @@
 	</div>
 </section>
 
+<section class="ftco-section ftco-no-pt ftc-no-pb">
+	<div class="container ">
+		<div class="row wrapper">
+			<div class="col-md-12 order-md-last wrap-about py-5 wrap-about bg-light">
+				<div class="text px-5 ftco-animate">
+					<p><a class="block-20 d-flex align-items-end"  style="background-image: url('images/image_2.jpg');"></a></p>
+					<h4>睿泽国际作为中国知名ICT企业的高级合作伙伴，为企业提供一站式IT解决方案，包括企业基础网络设施、智慧办公软件解决方案、安保、智慧办公楼等整体解决方案。</h4>
+				</div>
+			</div>
 
+		</div>
+	</div>
+</section>
 
 <section class="ftco-section bg-light">
 	<div class="container">
@@ -227,10 +240,11 @@
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
 						<li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
-						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
-						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
+						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
+
 						<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
+						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
