--- a/products.html
+++ b/products.html
@@ -29,10 +29,11 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
 				<li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
-				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
-				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item active"><a href="products.html" class="nav-link">渠道拓展</a></li>
+				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
+
 				<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
+				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
@@ -47,6 +48,7 @@
         <div class="row no-gutters slider-text align-items-center justify-content-center">
             <div class="col-md-9 ftco-animate text-center">
                 <h1 class="mb-2 bread">渠道拓展</h1>
+				<a ><h5 class="mb-2 bread">依托欧洲积累的本地资源为企业提供资源对接、业务拓展和服务</h5></a>
 				<p class="breadcrumbs">
 				<p>
 					<a href="products/mobile/mobile.html" class="btn btn-info px-4 py-3"> 智能手机</a>
@@ -62,9 +64,27 @@
 
 
 
+
+<!--<section class="ftco-section ftco-no-pt ftc-no-pb">-->
+<!--	<div class="container ">-->
+<!--		<div class="row wrapper">-->
+<!--			<div class="col-md-12 order-md-last wrap-about py-5 wrap-about bg-light">-->
+<!--				<div class="text px-5 ftco-animate">-->
+<!--&lt;!&ndash;					<p><a class="block-20 d-flex align-items-end"  style="background-image: url('images/image_3.jpg');"></a></p>&ndash;&gt;-->
+<!--					<h4>睿泽国际依托在欧洲多年积累本地资源，为企业提供各种资源对接和拓展的咨询与业务代理服务。</h4>-->
+<!--				</div>-->
+<!--			</div>-->
+
+<!--		</div>-->
+<!--	</div>-->
+<!--</section>-->
+
 <section class="ftco-section bg-light">
 	<div class="container">
-		<div class="row" class = "wrapper">
+
+		<div class="row wrapper">
+
+
 			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
 					<a href="products/mobile/mobile.html" class="block-20 d-flex align-items-end" style="background-image: url('products/mobile/smartphone.jpg');">
@@ -255,10 +275,11 @@
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
 						<li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
-						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
-						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
+						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
+
 						<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
+						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
