--- a/products/battery/battery.html
+++ b/products/battery/battery.html
@@ -23,7 +23,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
     <div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="../../index.html"><img class="logo_img" style="height: 90px; width: 100%"src="../../images/logo.png"/></a>
+		<a class="navbar-brand" href="../../index.html"><img class="logo_img" style="height: 90px; width: auto"src="../../images/logo.png"/></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="oi oi-menu"></span> Menu
@@ -31,10 +31,11 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
 				<li class="nav-item"><a href="../../index.html" class="nav-link">首页</a></li>
-				<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
-				<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item active"><a href="../../products.html" class="nav-link">渠道拓展</a></li>
+				<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
+
 				<li class="nav-item"><a href="../../gooverseas.html" class="nav-link">中资落地服务</a></li>
+				<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="../../about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="../../contact.html" class="nav-link">联系我们</a></li>
@@ -67,15 +68,20 @@
 
 <section class="ftco-section bg-light">
 	<div class="container">
-		<h3 class="heading text-center"><a >家用智能储能系统结构图</a></h3>
-		<a  class="block-40 d-flex align-items-end" style="background-image: url('structure.jpg');">
-		</a>
-		<div class="text bg-white p-4">
-
-			<h4>模块化设计，配置灵活，安装便捷；高防护等级，部署灵活；云端监控，云边端协同，快速故障告警。</h4>
-		</div>
 
 		<div  class="row wrapper">
+
+<!--			<div class="col-md-12 col-lg-12 ftco-animate">-->
+<!--				<div class="blog-entry">-->
+<!--					<h3 class="heading text-center"><a >家用智能储能系统结构图</a></h3>-->
+<!--					<a  class="block-40 d-flex align-items-end" style="background-image: url('structure.jpg');"></a>-->
+<!--					<div class="text bg-white p-4">-->
+<!--						<h4>模块化设计，配置灵活，安装便捷；高防护等级，部署灵活；云端监控，云边端协同，快速故障告警。</h4>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
+
+
 			<div class="col-md-12 col-lg-6 ftco-animate">
 				<div class="blog-entry">
 					<a  class="block-20 d-flex align-items-end" style="background-image: url('residental.jpg');">
@@ -205,10 +211,11 @@
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
 						<li class="nav-item"><a href="../../index.html" class="nav-link">首页</a></li>
-						<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
-						<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="../../products.html" class="nav-link">渠道拓展</a></li>
+						<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
+
 						<li class="nav-item"><a href="../../gooverseas.html" class="nav-link">中资落地服务</a></li>
+						<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="../../about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="../../contact.html" class="nav-link">联系我们</a></li>
