--- a/investment/mapfre/mapfre_seguro.html
+++ b/investment/mapfre/mapfre_seguro.html
@@ -21,17 +21,18 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="../../index.html"><img class="logo_img" style="height: 90px; width: 100%"src="../../images/logo.png"/></a>
+		<a class="navbar-brand" href="../../index.html"><img class="logo_img" style="height: 90px; width: auto"src="../../images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
 		<div class="collapse navbar-collapse" id="ftco-nav">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item"><a href="../../index.html" class="nav-link">首页</a></li>
-				<li class="nav-item active"><a href="../../investment.html" class="nav-link">金融保险</a></li>
-				<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item"><a href="../../products.html" class="nav-link">渠道拓展</a></li>
+				<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
+
 				<li class="nav-item"><a href="../../gooverseas.html" class="nav-link">中资落地服务</a></li>
+				<li class="nav-item active"><a href="../../investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="../../about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="../../contact.html" class="nav-link">联系我们</a></li>
@@ -356,10 +357,11 @@
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
 						<li class="nav-item"><a href="../../index.html" class="nav-link">首页</a></li>
-						<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
-						<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="../../products.html" class="nav-link">渠道拓展</a></li>
+						<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
+
 						<li class="nav-item"><a href="../../gooverseas.html" class="nav-link">中资落地服务</a></li>
+						<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="../../about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="../../contact.html" class="nav-link">联系我们</a></li>
