--- a/news.html
+++ b/news.html
@@ -179,7 +179,7 @@
 			<div class="col-md-12 suscribete_form">
 				<h2>更多信息请关注公众号</h2>
 				<p class="mb-0">请扫码关注</p>
-				<img src="images/wechatQRCode.jpg" style="width: auto; height: 50%">
+				<img src="images/publishQRCode.jpg" style="width: auto; height: 50%">
 			</div>
 		</div>
 	</div>
