add investment project cases

--- a/investment/investment/cases/case_charging.html
+++ b/investment/investment/cases/case_charging.html
@@ -68,17 +68,26 @@
 		<div class="row" class = "wrapper">
 			<div class="col-md-4 col-lg-12 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<h2 class="mb-3">等待更新</h2>
+					<h2 class="mb-3">充电桩项目</h2>
 					<div class="meta">
 						<div><a><span class="icon-calendar"></span> 28, 07, 2023</a></div>
 					</div>
 					<a class="block-30 d-flex align-items-stretch align-items-end" style="background-image: url('../case_charging.jpg');"></a>
-					<p>敬请期待</p>
+					<br>
+					<p>西班牙市场排名前茅充电桩运营公司，融资需求≥1000万欧元， 可提供≥20%股权，投资利润率很高，保守估算20%。</p>
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="case_charging1.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="case_charging2.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="case_charging3.jpg">
 				</div>
 			</div>
 		</div>
 	</div>
-
 </section>
 
 
