--- a/investment/investment/cases/case_therm.html
+++ b/investment/investment/cases/case_therm.html
@@ -69,12 +69,22 @@
 		<div class="row" class = "wrapper">
 			<div class="col-md-4 col-lg-12 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<h2 class="mb-3">等待更新</h2>
+					<h2 class="mb-3">高效节能热能转换国际专利项目</h2>
 					<div class="meta">
 						<div><a><span class="icon-calendar"></span> 28, 07, 2023</a></div>
 					</div>
 					<a class="block-30 d-flex align-items-stretch align-items-end" style="background-image: url('../case_therm.jpg');"></a>
-					<p>敬请期待</p>
+					<br>
+					<p>热能转换技术可将工业废热转换为清洁可持续能源，联系专家了解更多项目详情。</p>
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="case_therm1.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="case_therm2.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="case_therm3.jpg">
 				</div>
 			</div>
 		</div>
