--- a/investment/investment/investment_projects.html
+++ b/investment/investment/investment_projects.html
@@ -80,7 +80,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 href="cases/case_therm.html" class="heading"><a >高效节能热能转换国际专利项目</a></h3>
-						<p>热能转换技术可将工业废热转换为清洁可持续能源。</p>
+						<p>热能转换技术可将工业废热转换为清洁可持续能源，联系专家了解更多项目详情。</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="cases/case_therm.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
